# fe

./: Cargo.toml  \
crates/analyzer/: Cargo.toml
crates/analyzer/src/traversal/: pattern_analysis.rs
crates/analyzer/tests/: analysis.rs  errors.rs
crates/common/src/: config.rs  ingot.rs  urlext.rs
crates/driver/src/: db.rs  lib.rs
crates/fe/: Cargo.toml
crates/fe/src/: check.rs  main.rs
crates/hir/: Cargo.toml
crates/hir-analysis/: Cargo.toml
crates/hir-analysis/src/name_resolution/: path_resolver.rs
crates/hir-analysis/tests/: analyze_repeated_updates.rs
crates/hir/src/hir_def/: mod.rs  module_tree.rs  (+2 more)
crates/language-server/: Cargo.toml
crates/language-server/editors/zed/: Cargo.toml  extension.toml
crates/language-server/editors/zed/languages/fe/: brackets.scm  config.toml  highlights.scm  outline.scm
crates/language-server/editors/zed/src/: lib.rs
crates/language-server/src/: actor.rs  backend.rs  db.rs  diagnostics.rs  goto.rs  language_server.rs  logging.rs  lsp_actor_service.rs  lsp_kameo.rs  lsp_streaming_layer.rs  lsp_streams.rs  main.rs  router_layer.rs  server.rs  state.rs  streaming_router.rs
crates/language-server/src/backend/: db.rs  get_core.rs  get_std.rs  mod.rs  workspace.rs
crates/language-server/src/functionality/: actor.rs  diagnostics.rs  goto.rs  handlers.rs  hover.rs  mod.rs  settings.rs  streams.rs
crates/language-server/src/handlers/: notifications.rs  request.rs
crates/language-server/src/lsp_actor/: mod.rs
crates/language-server/test_files/: goto.fe  smallest_enclosing.fe
crates/language-server/test_files/with_std/src/: lib.fe  lib.snap.new
crates/resolver/src/: ingot.rs
(+3 files in other folders)
