[package]
name = "fe-language-server"
version = "0.23.0"
edition = "2021"
authors = ["The Fe Developers <snakecharmers@ethereum.org>"]
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "An LSP language server for Fe lang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }
codespan-reporting = "0.11"
hir = { path = "../hir", package = "fe-hir" }
macros = { path = "../macros", package = "fe-macros" }
hir-analysis = { path = "../hir-analysis", package = "fe-hir-analysis" }
camino = "1.1.4"
clap = { version = "4.3", features = ["derive"] }
fe-analyzer = {path = "../analyzer", version = "^0.23.0"}
common = { path = "../common2", package = "fe-common2" }
anyhow = "1.0.71"
crossbeam-channel = "0.5.8"
lsp-server = "0.7.0"
lsp-types = "0.94.0"
serde = "1.0.162"
serde_json = "1.0.96"
indexmap = "1.6.2"
rowan = "0.15.10"
fxhash = "0.2.1"
dir-test = "0.1"
fe-compiler-test-utils = { path = "../test-utils" }
log = "0.4"
patricia_tree = "0.6.2"
glob = "0.3.1"
url = "2.4.1"
tokio-macros = "2.2.0"
futures = "0.3.28"
async-lsp = "0.2.0"
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-util = "0.7.10"
async-std = "1.12.0"

[features]
default = ["runtime-specific"]
runtime-specific = ["tokio/io-std"]
runtime-agnostic = []

[dependencies.tokio]
version = "1.35.1"
default-features = false
features = ["sync", "macros", "io-util", "rt", "time"]

